@@ -16,7 +16,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>CY Land - Actor Framework</name>
-    <description>Framework d'acteurs distribués inspiré d'Akka avec Spring Boot</description>
+    <description>Framework d acteurs distribues inspire d Akka avec Spring Boot</description>
 
     <modules>
         <module>actor-framework</module>
@@ -58,9 +58,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
